verify ticket number
